# 3XOR-mining

./: README  types.h
custom_cgminer/: Makefile.am  api.c  cgminer.c  configure.ac  driver-bitmain.c  driver-bitmain.h  logging.c  logging.h  miner.h  usbutils.c  usbutils.h  util.c  util.h
custom_cgminer/scripts/: build.sh  install.sh  profile.sh  relax.sh  run.sh
ijoux/: Makefile  README.txt  common.c  common.h  datastructures.h  do_task.c  do_task_group.c  joux_standalone.c  joux_v3.c
mining_server/: .gitignore  Makefile  README.md  sample_client.nw  server.nw
postprocessing/: Makefile  make.py  post_processing.c
preprocessing/: Makefile  dict_checker.c  forger.c  grouper.py  hash_checker.c  hasher.c  hasher.h  merger.c  preprocess.py  preprocessing.c  preprocessing.h  run_grouper.py  sha256.c  sha256.h  slice_check.py  slice_checker.c  slice_stats.c  slicer.c  sorter.c  splitter.c  stats.py  types.h
